--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aradox-final",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://techsparkling.github.io/aradox-final",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -15,8 +16,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.16.0",
     "framer": "^2.2.1",
     "lottie-react": "^2.3.1",
+    "nodemailer": "^6.9.1",
+    "nodemailer-react": "^1.0.2",
     "react": "^18.2.0",
     "react-animated-text-content": "^1.0.1",
     "react-awesome-reveal": "^4.1.0",
@@ -26,10 +30,13 @@
     "react-hooks-global-state": "^2.1.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "swiper": "^8.4.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -57,6 +64,7 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "gh-pages": "^5.0.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
